# convolutional_neural_network

./: .coverage  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py  test.txt
.VSCodeCounter/2023-11-19_16-23-50/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
Documentation/: changelog.md  implementation_document.md  requirement_specification.md  testing_document.md  user_manual.md
Documentation/Weekly_reports/: week_1.md  week_2.md  week_3.md  week_4.md  week_5.md  week_6.md  week_7.md  week_8.md
data/trained_networks/: 04-11-2023-19-35.npz  09-11-2023-05-07.npz  22-11-2023-12-14.npz  22-11-2023-20-35.npz  23-11-2023-02-25.npz  23-11-2023-05-00.npz  23-11-2023-07-39.npz  23-11-2023-10-25.npz  23-11-2023-18-33.npz  23-11-2023-21-56.npz  24-10-2023-17-15.npz  24-11-2023-01-17.npz  24-11-2023-05-07.npz  24-11-2023-12-45.npz  25-10-2023-02-26.npz  25-10-2023-10-14.npz  25-10-2023-10-28.npz  25-10-2023-10-45.npz  25-10-2023-11-15.npz  25-10-2023-15-09.npz  25-10-2023-15-58.npz  25-10-2023-16-44.npz  25-11-2023-10-38.npz  26-10-2023-22-53.npz  27-10-2023-05-14.npz  27-10-2023-09-02.npz  27-11-2023-15-29.npz  27-11-2023-19-04.npz  28-11-2023-18-09.npz
documentation/: requirement_specification.md
src/: app.py  main.py  mnist_data_processor.py  network_testing.py  network_train.py
src/app/: main_page.py  ui.py
src/network/: mnist_data_processor.py  neural_network.py  non_linearity.py  softmax.py  testi.py
src/network/layers/: classifier.py  (+5 more)
src/neural_network/: neural_network.py  non_linearity.py
(+10 files in other folders)
