[tool.poetry]
name = "tira-labra"
version = "0.1.0"
description = "Implementation of a convolutional neural network to classify MNIST hand-written digits."
authors = ["Joona Nikula <nikulajoona@gmail.com>"]
readme = "README.md"
packages = [{include = "tira_labra"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
lint = "^1.2.1"
invoke = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
