[tool.poetry]
name = "tira-labra"
version = "0.1.0"
description = ""
authors = ["Joona Nikula <nikulajoona@gmail.com>"]
readme = "README.md"
packages = [{include = "tira_labra"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.2"


[tool.poetry.group.dev.dependencies]
invoke = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
