[tool.poetry]
name = "tira-labra"
version = "0.1.0"
description = ""
authors = ["Joona Nikula <nikulajoona@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.2"
idx2numpy = "^1.2.3"


[tool.poetry.group.dev.dependencies]
invoke = "^2.2.0"
lint = "^1.2.1"
pytest = "^7.4.2"
coverage = "^7.3.1"
autopep8 = "^2.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
